--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -133,3 +133,9 @@
         font-size: 10px;
     }
 }
+
+@media screen and (max-width : 480px) {
+    .home-container{
+        width: 100vw;
+    }
+}
