--- a/src/styles/HomeLayout.css
+++ b/src/styles/HomeLayout.css
@@ -23,7 +23,7 @@ input{
 }
 .homeLay-search input{
     width: 100%;
-    height: 30px;
+    height: 35px;
     padding: 0px 10px;
     border-radius: 12px;
     border: none;
@@ -125,5 +125,9 @@ input{
     }
     .homeLay-search{
         width: 50%;
+    }
+    .homeLay-search input{
+        height: 30px;
+        font-size: 12px;
     }
 }
