--- a/src/styles/StickyNotes.css
+++ b/src/styles/StickyNotes.css
@@ -189,3 +189,9 @@
         width: 130px;
     }
 }
+
+@media screen and (max-width : 480px) {
+    .sticky-body{
+        margin-left: 20px;
+    }
+}
