--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -77,6 +77,9 @@
     text-align: center;
     margin: 10px;
 }
+.home-folder:hover{
+    transform: scale(1.1);
+}
 .home-folder i{
     font-size: 60px;
 }
