--- a/src/styles/StickyNotes.css
+++ b/src/styles/StickyNotes.css
@@ -50,6 +50,11 @@
     border-radius: 10px;
     position: relative;
     padding: 10px 20px 10px 20px;
+    box-shadow: black 0px 5px 15px;
+    border: 2px solid black;
+}
+.sticky-note-div:hover{
+    transform: scale(1.05);
 }
 .sticky-note{
     text-decoration: none;
